[platform] UNC-friendly path-to-URL conversion in the plugin loader (IDEA-237519)
GitOrigin-RevId: 156a2b725971560846ce335b84a9c3b33a1e750c